--- a/Resources/Prototypes/_White/Fluff/sponsor.yml
+++ b/Resources/Prototypes/_White/Fluff/sponsor.yml
@@ -325,6 +325,11 @@
   entity: GeraldiyRubberStamp
   sponsorOnly: true
 
+- type: loadout
+  id: GeraldiyArmblade
+  entity: GeraldiyAncientBlade
+  sponsorOnly: true
+  whitelistJobs: [Chaplain]
 # KnifeCappy
 
 - type: loadout
