remove: remove bagel from white map pool

--- a/Resources/Prototypes/Maps/Pools/White.yml
+++ b/Resources/Prototypes/Maps/Pools/White.yml
@@ -5,8 +5,8 @@
   - Scoupidia
   - Triumph
   - WhiteBox
-  - Bagel    # Temporary
   - Meta     # Temporary
   - Train    # Temporary
+# - Bagel    # Она утонула
 #  - Polaris
 #  - Void
