Tagilla hammer fix

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -284,7 +284,7 @@
       - id: WeaponPistolMk58Nonlethal
       - id: MagazinePistol
       - id: BoxMindshield
-
+      - id: TagillaHammer
 - type: entity
   id: LockerFreezerVaultFilled
   suffix: Vault, Locked
