Binary-channel-fix

--- a/Resources/Prototypes/Damage/modifier_sets.yml
+++ b/Resources/Prototypes/Damage/modifier_sets.yml
@@ -331,3 +331,16 @@
     Caustic: 0.0
     Poison: 0.0
     Cellular: 0.0
+
+- type: damageModifierSet
+  id: AssaultBorg
+  coefficients:
+    Blunt: 0.8
+    Slash: 0.5
+    Piercing: 0.3
+    Heat: 1.2
+    Shock: 1.5
+    Cold: 0.0
+    Caustic: 0.5
+    Poison: 0.0
+    Cellular: 0.0
