--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
@@ -300,6 +300,8 @@
       noMindState: synd_sec
     - type: Construction
       node: syndicateassault
+    - type: Damageable
+      damageModifierSet: AssaultBorg
 
 - type: entity
   id: BorgChassisSyndicateMedical
