--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
@@ -269,3 +269,32 @@
       deconstructionTarget: null
       graph: EnergyDoubleSwordGraph
       node: desword
+
+- type: entity
+  parent: EnergySwordBase
+  id: EnergySwordBorg
+  components:
+    - type: ItemToggleMeleeWeapon
+      activatedSoundOnHit:
+        path: /Audio/Weapons/eblade1.ogg
+        params:
+          variation: 0.250
+      activatedSoundOnHitNoDamage:
+        path: /Audio/Weapons/eblade1.ogg
+        params:
+          variation: 0.250
+          volume: -10
+      activatedSoundOnSwing:
+        path: /Audio/Weapons/eblademiss.ogg
+        params:
+          variation: 0.125
+      activatedDamage:
+        types:
+          Slash: 15
+          Heat: 15
+          Structural: 20
+    - type: Reflect
+      reflectProb: 0.8
+      enabled: false
+      reflects:
+        - Energy
