--- a/Resources/Prototypes/radio_channels.yml
+++ b/Resources/Prototypes/radio_channels.yml
@@ -100,7 +100,9 @@
 - type: radioChannel
   id: Binary
   name: chat-radio-binary
-  keycode: 'b'
+  keycodes:
+    - 'b'
+    - 'б'
   frequency: 1001
   color: "#2ed2fd"
   # long range since otherwise it'd defeat the point of a handheld radio independent of telecomms
@@ -109,7 +111,9 @@
 - type: radioChannel
   id: Freelance
   name: chat-radio-freelance
-  keycode: 'f'
+  keycodes:
+    - 'f'
+    - 'ф'
   frequency: 1984
   color: "#f6ce64"
   # long range since otherwise it'd defeat the point of a handheld radio independent of telecomms
