- fix: Fix surplus discount.

--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -859,6 +859,7 @@
       components:
       - SurplusBundle
   saleLimit: 1
+  saleBlacklist: true
 
 - type: listing
   id: UplinkSuperSurplusBundle
@@ -879,6 +880,7 @@
       components:
       - SurplusBundle
   saleLimit: 1
+  saleBlacklist: true
 
 - type: listing
   id: UplinkSingarityBeacon
