- fix: Fix clumsy bolt barrage.

--- a/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/blood_barrage.yml
@@ -19,6 +19,7 @@
     soundEmpty: null
     soundGunshot:
       path: /Audio/White/Cult/wand_teleport.ogg
+    clumsyProof: true
   - type: BasicEntityAmmoProvider
     proto: BloodBolt
     capacity: 25
