- add: Monkeys can lie down.

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1253,6 +1253,8 @@
     tags:
     - VimPilot
     - DoorBumpOpener
+  - type: StandingState
+    canLieDown: true
 
 - type: entity
   name: monkey
