add: add borgs to whitebox and wonderbox

--- a/Resources/Prototypes/Maps/WonderBox.yml
+++ b/Resources/Prototypes/Maps/WonderBox.yml
@@ -59,4 +59,5 @@
             SeniorOfficer: [ 1, 1 ]
             SeniorPhysician: [ 1, 1 ]
             SeniorEngineer: [ 1, 1 ]
+            Borg: [ 2, 2 ]
 
