--- a/Resources/Prototypes/Maps/Whitebox.yml
+++ b/Resources/Prototypes/Maps/Whitebox.yml
@@ -57,3 +57,4 @@
             SeniorPhysician: [ 1, 1 ]
             SeniorEngineer: [ 1, 1 ]
             SeniorSalvageSpecialist: [ 1, 1 ]
+            Borg: [ 2, 2 ]
