add: add small soft light to laser weapon + fix the bluest blue energy shield

--- a/Resources/Prototypes/Entities/Objects/Shields/shields.yml
+++ b/Resources/Prototypes/Entities/Objects/Shields/shields.yml
@@ -455,8 +455,8 @@
       netsync: false
       enabled: false
       radius: 1.5
-      energy: 2
-      color: blue
+      energy: 0.7
+      color: "#678AD9"
     - type: Reflect
       enabled: false
       reflectProb: 1
