--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -48,10 +48,10 @@
     access: [["Security"]]
   - type: SecurityHud
     criminalrecords:
-    - CriminalRecordIconReleased
-    - CriminalRecordIconSuspected
-    - CriminalRecordIconWanted
-    - CriminalRecordIconIncarcerated
+    - SecurityIconDischarged
+    - SecurityIconSuspected
+    - SecurityIconWanted
+    - SecurityIconIncarcerated
     - CriminalRecordIconRemove
   - type: UserInterface
     interfaces:
