--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -49,6 +49,7 @@
   - type: SecurityHud
     criminalrecords:
     - SecurityIconDischarged
+    - SecurityIconParoled
     - SecurityIconSuspected
     - SecurityIconWanted
     - SecurityIconIncarcerated
