Makes machine parts stackable, removes unused field in stack prototypes (#28434)
* Makes machine parts stacks, removes unused field in stack prototypes

* forgor

* Fix tests

* Fixes lathe construction. Yes. This sucks but there's no better way that doesnt involve refactoring machine parts completely

* detail

* a

--- a/Resources/Prototypes/Stacks/Materials/materials.yml
+++ b/Resources/Prototypes/Stacks/Materials/materials.yml
@@ -1,66 +1,65 @@
 - type: stack
   id: Biomass
-  name: биомасса
+  name: biomass
   icon: { sprite: /Textures/Objects/Misc/monkeycube.rsi, state: cube }
   spawn: MaterialBiomass1
   maxCount: 100
-  itemSize: 1
 
 - type: stack
   id: WoodPlank
-  name: древесина
+  name: wood plank
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: wood }
   spawn: MaterialWoodPlank1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: Cardboard
-  name: картонная коробка
+  name: cardboard
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: cardboard }
   spawn: MaterialCardboard1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: Cloth
-  name: ткань
+  name: cloth
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: cloth }
   spawn: MaterialCloth1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: Durathread
-  name: дюраткань
+  name: durathread
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: durathread }
   spawn: MaterialDurathread1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: Diamond
-  name: алмаз
+  name: diamond
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: diamond }
   spawn: MaterialDiamond1
   maxCount: 30
-  itemSize: 2
 
 - type: stack
   id: Cotton
-  name: хлопок
+  name: cotton
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: cotton }
   spawn: MaterialCotton1
   maxCount: 30
-  itemSize: 1
+
+- type: stack
+  id: Pyrotton
+  name: pyrotton
+  icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: pyrotton }
+  spawn: MaterialPyrotton1
+  maxCount: 30
 
 - type: stack
   id: Bananium
-  name: бананиум
+  name: bananium
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: bananium }
   spawn: MaterialBananium1
   maxCount: 10
-  itemSize: 2
 
 - type: stack
   id: MeatSheets
@@ -68,7 +67,6 @@
   icon: { sprite: /Textures/Objects/Materials/Sheets/meaterial.rsi, state: meat }
   spawn: MaterialSheetMeat1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: WebSilk
@@ -76,7 +74,6 @@
   icon: { sprite: /Textures/Objects/Materials/silk.rsi, state: icon }
   spawn: MaterialWebSilk1
   maxCount: 50
-  itemSize: 1
 
 - type: stack
   id: Bones
@@ -84,7 +81,6 @@
   icon: { sprite: /Textures/Objects/Materials/materials.rsi, state: bones}
   spawn: MaterialBones1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: RunicMetalSheets
@@ -92,12 +88,10 @@
   icon: { sprite: /Textures/White/Cult/Entities/runic_metal.rsi, state: runic}
   spawn: CultRunicMetal1
   maxCount: 30
-  itemSize: 1
 
 - type: stack
   id: Gunpowder
-  name: порох
+  name: gunpowder
   icon: { sprite: /Textures/Objects/Misc/reagent_fillings.rsi, state: powderpile }
   spawn: MaterialGunpowder
   maxCount: 60
-  itemSize: 1
