Flash overlay rework and bugfixes (#27369)

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -125,6 +125,7 @@
     - Stun
     - KnockedDown
     - SlowedDown
+    - Flashed
   - type: TypingIndicator
     proto: robot
   - type: Speech
@@ -143,7 +144,6 @@
     locked: true
   - type: ActivatableUIRequiresLock
   - type: LockedWiresPanel
-  - type: Flashable
   - type: Damageable
     damageContainer: Silicon
   - type: Destructible
