--- a/Resources/Prototypes/status_effects.yml
+++ b/Resources/Prototypes/status_effects.yml
@@ -1,4 +1,4 @@
-﻿# Status effect prototypes.
+# Status effect prototypes.
 # Holds no actual logic, just some basic data about the effect.
 
 - type: statusEffect
@@ -73,6 +73,9 @@
 
 - type: statusEffect
   id: Drowsiness #blurs your vision and makes you randomly fall asleep
+
+- type: statusEffect
+  id: Flashed
 
 # WD EDIT
 - type: statusEffect
