--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/trail.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/trail.yml
@@ -9,7 +9,7 @@
     splineRendererType: Continuous
     creationMethod: OnMove
     lengthStep: 0.1
-    scale: 0.05, 0.0
+    scale: 0.03, 0.0
     lifetime: 1
     randomWalk: 0.03, 0.001
     gravity: 0.001, 0.005
@@ -20,3 +20,4 @@
       - 1, 1, 1, 2
       - 1, 1, 1, 0
       - 1, 1, 1, 0
+    optionsConcealable: true
