--- a/Resources/Prototypes/StatusEffects/security.yml
+++ b/Resources/Prototypes/StatusEffects/security.yml
@@ -40,3 +40,10 @@
   icon:
     sprite: /Textures/Interface/Misc/security_icons.rsi
     state: hud_wanted
+
+- type: statusIcon
+  parent: SecurityIcon
+  id: CriminalRecordIconRemove
+  icon:
+    sprite: /Textures/Interface/Misc/security_icons.rsi
+    state: hud_discharged
