--- a/Resources/Prototypes/Entities/Markers/Spawners/techspawner.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/techspawner.yml
@@ -26,8 +26,6 @@
       - BookMedicalReferenceBook
       - BookHowToSurvive
       - BookChemicalCompendium
-      - BookEscalation
-      - BookEscalationSecurity
       - BookAtmosDistro
       - BookAtmosWaste
       - BookAtmosAirAlarms
@@ -290,7 +288,7 @@
       - MedkitFilled
       - MedkitCombat
       - MedkitRadiationFilled
-      - MedkilOxygenFilled
+      - MedkitOxygenFilled
       - MedkitBruteFilled
       - MedkitToxinFilled
       - MedkitBurnFilled
@@ -300,7 +298,7 @@
       - Medkit
       - MedkitCombatFilled
       - MedkitRadiation
-      - MedkilOxygen
+      - MedkitO2
       - MedkitBrute
       - MedkitToxin
       - MedkitBurn
@@ -518,7 +516,7 @@
       - CowToolboxFilled
       - CowToolbox
       - ToolboxGoldFilled
-      - ToolboxGold
+      - ToolboxGolden
     rareChance: 0.5
 
 # random vomit spawner
