--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -34,7 +34,7 @@
     - HudMedical
 
 - type: entity
-  parent: ClothingEyesBase
+  parent: [ClothingEyesBase, SecHud]
   id: ClothingEyesHudSecurity
   name: security hud
   description: A heads-up display that scans the humanoids in view and provides accurate data about their ID status and security records.
@@ -44,20 +44,6 @@
   - type: Clothing
     sprite: Clothing/Eyes/Hud/sec.rsi
   - type: ShowSecurityIcons
-  - type: AccessReader
-    access: [["Security"]]
-  - type: SecurityHud
-    criminalrecords:
-    - SecurityIconDischarged
-    - SecurityIconParoled
-    - SecurityIconSuspected
-    - SecurityIconWanted
-    - SecurityIconIncarcerated
-    - CriminalRecordIconRemove
-  - type: UserInterface
-    interfaces:
-    - key: enum.SecurityHudUiKey.Key
-      type: SecurityHudBUI
   - type: Tag
     tags:
     - HudSecurity
@@ -152,7 +138,7 @@
   - type: ShowThirstIcons
 
 - type: entity
-  parent: ClothingEyesBase
+  parent: [ClothingEyesBase, SecHud]
   id: ClothingEyesHudMedSec
   name: medsec hud
   description: An eye display that looks like a mixture of medical and security huds.
@@ -173,7 +159,7 @@
     - Biological
 
 - type: entity
-  parent: ClothingEyesBase
+  parent: [ClothingEyesBase, SecHud]
   id: ClothingEyesHudMultiversal
   name: multiversal hud
   description: Filler
@@ -193,7 +179,7 @@
   - type: ShowSyndicateIcons
 
 - type: entity
-  parent: ClothingEyesBase
+  parent: [ClothingEyesBase, SecHud]
   id: ClothingEyesHudOmni
   name: omni hud
   description: Filler
