--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/e_sword.yml
@@ -262,6 +262,7 @@
       reflects:
         - Energy
     - type: ToggleableWielded
+    - type: FlipOnHit
     - type: Construction
       deconstructionTarget: null
       graph: EnergyDoubleSwordGraph
