--- a/Resources/Prototypes/Maps/Triumph.yml
+++ b/Resources/Prototypes/Maps/Triumph.yml
@@ -60,3 +60,4 @@
             SeniorOfficer: [ 1, 1 ]
             SeniorPhysician: [ 1, 1 ]
             SeniorEngineer: [ 1, 1 ]
+            Inspector: [ 1, 1]
