--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -109,6 +109,9 @@
     proto: robot
   - type: ZombieImmune
   - type: Penetrated
+  - type: StepTriggerImmune
+  - type: NoSlip
+  - type: Insulated
 
 - type: entity
   parent: MobSiliconBase
@@ -235,7 +238,6 @@
   - type: MovementSpeedModifier
     baseWalkSpeed: 2
     baseSprintSpeed: 3
-  - type: NoSlip
   - type: HTN
     rootTask:
       task: CleanbotCompound
@@ -282,7 +284,6 @@
   - type: Construction
     graph: MediBot
     node: bot
-  - type: NoSlip
   - type: Anchorable
   - type: InteractionPopup
     interactSuccessString: petting-success-medibot
