--- a/Resources/Prototypes/Magic/white.yml
+++ b/Resources/Prototypes/Magic/white.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   id: ActionElectricArcSpell
   name: Electric arc
   noSpawn: true
@@ -6,10 +6,12 @@
     - type: Magic
       requiresClothes: true
     - type: WorldTargetAction
-      useDelay: 60
       itemIconStyle: BigAction
+      useDelay: 60
       checkCanAccess: false
+      checkCanInteract: false
       range: 10
+      alwaysPlaySound: false
       sound: !type:SoundPathSpecifier
         path: /Audio/White/Magic/Arc/cast.ogg
       icon:
@@ -26,6 +28,10 @@
         speech: "KUH, ABAH'RAH"
         prototype: ProjectileTeslaBall
         posData: !type:TargetCasterPos
+    - type: VariableUseDelay
+      useDelay: 6
+      altUseDelay: 12
+      chargeUseDelay: 40
 
 - type: entity
   id: ActionForceSpell
@@ -35,10 +41,12 @@
     - type: Magic
       requiresClothes: true
     - type: WorldTargetAction
-      useDelay: 60
       itemIconStyle: BigAction
+      useDelay: 60
       checkCanAccess: false
+      checkCanInteract: false
       range: 10
+      alwaysPlaySound: false
       sound: !type:SoundPathSpecifier
         path: /Audio/White/Magic/Force/cast.ogg
       icon:
@@ -53,6 +61,10 @@
       isAltEnabled: true
       event: !type:ForceSpellEvent
         speech: "EL DRITCH!"
+    - type: VariableUseDelay
+      useDelay: 6
+      altUseDelay: 12
+      chargeUseDelay: 40
 
 - type: entity
   id: ActionFireballSpell
@@ -62,13 +74,15 @@
     - type: Magic
       requiresClothes: true
     - type: WorldTargetAction
-      useDelay: 60
       itemIconStyle: BigAction
+      useDelay: 60
       checkCanAccess: false
+      checkCanInteract: false
       range: 45
       isChargeEnabled: true
       chargeProto: MagicFollowerFireEntity
       isAltEnabled: true
+      alwaysPlaySound: false
       sound: !type:SoundPathSpecifier
         path: /Audio/Magic/fireball.ogg
       icon:
@@ -78,6 +92,10 @@
         prototype: ProjectileFireball
         posData: !type:TargetCasterPos
         speech: action-speech-spell-fireball
+    - type: VariableUseDelay
+      useDelay: 6
+      altUseDelay: 12
+      chargeUseDelay: 40
 
 - type: entity
   id: ActionCardSpell
@@ -87,9 +105,10 @@
     - type: Magic
       requiresClothes: true
     - type: WorldTargetAction
-      useDelay: 60
       itemIconStyle: BigAction
+      useDelay: 60
       checkCanAccess: false
+      checkCanInteract: false
       range: 45
       isChargeEnabled: true
       chargingSound:
@@ -98,6 +117,7 @@
       maxChargedSound:
         path: /Audio/White/Magic/Cards/max.ogg
       isAltEnabled: true
+      alwaysPlaySound: false
       sound: !type:SoundPathSpecifier
         path: /Audio/White/Magic/Cards/cast.ogg
       icon:
@@ -107,6 +127,10 @@
         prototype: ThrowingCard
         posData: !type:TargetCasterPos
         speech: "SHIZO NERO!"
+    - type: VariableUseDelay
+      useDelay: 6
+      altUseDelay: 1
+      chargeUseDelay: 40
 
 - type: entity
   id: ActionForcewallSpell
@@ -116,10 +140,12 @@
     - type: Magic
       requiresClothes: true
     - type: WorldTargetAction
-      useDelay: 60
       itemIconStyle: BigAction
+      useDelay: 60
       checkCanAccess: false
+      checkCanInteract: false
       range: 10
+      alwaysPlaySound: false
       sound: !type:SoundPathSpecifier
         path: /Audio/White/Magic/Force/cast.ogg
       icon:
@@ -135,6 +161,10 @@
       event: !type:ForceWallSpellEvent
         speech: "TARCOL MINTI ZHERI!"
         prototype: WallForce
+    - type: VariableUseDelay
+      useDelay: 10
+      altUseDelay: 20
+      chargeUseDelay: 60
 
 - type: entity
   id: ActionBlinkSpell
@@ -142,8 +172,9 @@
   noSpawn: true
   components:
     - type: InstantAction
-      useDelay: 60
+      useDelay: 6
       itemIconStyle: BigAction
+      checkCanInteract: false
       icon:
         sprite: Objects/Magic/magicactions.rsi
         state: blink
@@ -158,8 +189,9 @@
     - type: Magic
       requiresClothes: true
     - type: InstantAction
-      useDelay: 60
+      useDelay: 30
       itemIconStyle: BigAction
+      checkCanInteract: false
       icon:
         sprite: Objects/Magic/magicactions.rsi
         state: jaunt
@@ -174,8 +206,9 @@
     - type: Magic
       requiresClothes: true
     - type: InstantAction
-      useDelay: 60
+      useDelay: 40
       itemIconStyle: BigAction
+      checkCanInteract: false
       icon:
         sprite: Objects/Magic/magicactions.rsi
         state: emp_new
@@ -192,7 +225,7 @@
     - type: EntityTargetAction
       canTargetSelf: false
       range: 2
-      useDelay: 300
+      useDelay: 400
       itemIconStyle: BigAction
       icon:
         sprite: Objects/Magic/magicactions.rsi
@@ -210,7 +243,7 @@
     - type: EntityTargetAction
       canTargetSelf: false
       range: 2
-      useDelay: 300
+      useDelay: 200
       itemIconStyle: BigAction
       icon:
         sprite: Objects/Magic/magicactions.rsi
@@ -228,7 +261,7 @@
     - type: EntityTargetAction
       canTargetSelf: false
       range: 2
-      useDelay: 300
+      useDelay: 200
       itemIconStyle: BigAction
       icon:
         sprite: Objects/Magic/magicactions.rsi
